[project]
name = "graphview"
version = "0.1.0"
description = "A tool to help you navigate your markdown notes."
authors = [
    {name = "Kyle Diaz",email = "dev@kylediaz.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pyfzf (>=0.3.1,<0.4.0)"
]

[project.scripts]
graphview = "graphview.cli:main"

[tool.poetry]
packages = [{include = "graphview", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
